--- a/Final Project CS238.ipynb
+++ b/Final Project CS238.ipynb
@@ -3223,7 +3223,7 @@
     "        #println([r for (e,i,t,r) in r_history if i == 2])\n",
     "        reg_a1 = R - sum([r for (e,i,t,r) in r_history if i == 1])\n",
     "        reg_a2 = R - sum([r for (e,i,t,r) in r_history if i == 2])\n",
-    "        push!(runs, (run, reg_a1, reg_a2))\n",
+    "        push!(i, (run, reg_a1, reg_a2))\n",
     "    end\n",
     "    return runs\n",
     "end"
@@ -3317,8 +3317,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
+   "execution_count": 207,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -3330,10 +3332,10 @@
     {
      "data": {
       "text/plain": [
-       "run_seed_chain_simulations (generic function with 1 method)"
+       "run_seed_chain_simulations (generic function with 2 methods)"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3342,15 +3344,13 @@
     "#Now we run with that policy\n",
     "include(\"./Agent.jl\")\n",
     "using StatsBase\n",
-    "function run_seed_chain_simulations(nruns, Q_tables1, Q_tables2, N_tables1, N_tables2)\n",
+    "function run_seed_chain_simulations(nruns, Q_tables1, Q_tables2, N_tables1, N_tables2, num_agents)\n",
     "    runs = []\n",
     "    for i in 1:nruns\n",
-    "        num_agents = 1\n",
     "        agents = Any[]\n",
     "        num_states = 10\n",
     "        num_actions = 2\n",
     "        epochs=1\n",
-    "        num_agents = 2\n",
     "        seed_policies = []\n",
     "        H = floor(Int, 3 * num_states / 2)\n",
     "        actions = [1, 2]\n",
@@ -3364,18 +3364,21 @@
     "        # so diff with thompson sampling is that we should do the rand now\n",
     "        Q_tables_seed = Dict(i => Q_tables_list[rand(1:length(Q_tables_list))] for i in 1:num_agents)\n",
     "        N_tables_seed = Dict(i => N_tables_list[rand(1:length(N_tables_list))] for i in 1:num_agents)\n",
-    "\n",
-    "        #println(\"Q_T: $Q_tables_thomp\")\n",
-    "        #println(\"N_T: $N_tables_thomp\")\n",
-    "        push!(seed_policies, curry(curry(curry(curry(seed_pol_func, Q_tables_seed), N_tables_seed),1), actions))\n",
-    "        push!(seed_policies, curry(curry(curry(curry(seed_pol_func, Q_tables_seed), N_tables_seed),2), actions))\n",
+    "        \n",
+    "        for ag in 1:num_agents\n",
+    "            #println(\"Q_T: $Q_tables_thomp\")\n",
+    "            #println(\"N_T: $N_tables_thomp\")\n",
+    "            push!(seed_policies, curry(curry(curry(curry(seed_pol_func, Q_tables_seed), N_tables_seed),ag), actions))\n",
+    "            # push!(seed_policies, curry(curry(curry(curry(seed_pol_func, Q_tables_seed), N_tables_seed),2), actions))\n",
+    "        end\n",
     "        #println(\"after policies\")\n",
     "        (Q_tables3, N_tables3, trash) = PFAgent.setup_agents(states, num_states, num_agents,\n",
     "                                                                    actions, num_actions, ucb_pol)\n",
+    "        mdps = [deepcopy(true_mdp) for ag in 1:num_agents]\n",
     "        r_history = PFAgent.run_chain!(\n",
     "                   policies=seed_policies,\n",
     "                   found_target=chain_found_target,\n",
-    "                   mdps=[true_mdp, true_mdp],\n",
+    "                   mdps=mdps,\n",
     "                   update_Q=update_Q,\n",
     "                   n_agents=num_agents,\n",
     "                   n_states=num_states,\n",
@@ -3389,9 +3392,12 @@
     "        R = (num_states - 2) / 2\n",
     "        #println([r for (e,i,t,r) in r_history if i == 1])\n",
     "        #println([r for (e,i,t,r) in r_history if i == 2])\n",
-    "        reg_a1 = R - sum([r for (e,i,t,r) in r_history if i == 1])\n",
-    "        reg_a2 = R - sum([r for (e,i,t,r) in r_history if i == 2])\n",
-    "        push!(runs, (run, reg_a1, reg_a2))\n",
+    "        print(r_history)\n",
+    "        #reg = R - sum([r for (e,ag,t,r) in r_history if ag == an_ag end 0])\n",
+    "        for (e, ag, t, st, r)  in r_history\n",
+    "          push!(runs, (i, e, ag, t, st, r)) \n",
+    "        end\n",
+    "        #reg_a2 = R - sum([r for (e,ag,t,r) in r_history if ag == 2])\n",
     "    end\n",
     "    return runs\n",
     "end                                    \n",
@@ -3400,7 +3406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -3413,68 +3419,105 @@
       "e: 1, t: 1, agent 2, result: (s = 7, a = :right, r = -1, sp = 8, t = 1)\n",
       "e: 1, t: 3, agent 1, result: (s = 9, a = :right, r = -1, sp = 10, t = 3)\n",
       "e: 1, t: 2, agent 2, result: (s = 8, a = :right, r = -1, sp = 9, t = 2)\n",
+      "e: 1, t: 1, agent 3, result: (s = 7, a = :left, r = -1, sp = 6, t = 1)\n",
       "e: 1, t: 4, agent 1, result: (s = 10, a = :right, r = -1, sp = 11, t = 4)\n",
       "e: 1, t: 3, agent 2, result: (s = 9, a = :right, r = -1, sp = 10, t = 3)\n",
+      "e: 1, t: 2, agent 3, result: (s = 6, a = :left, r = -1, sp = 5, t = 2)\n",
+      "e: 1, t: 1, agent 4, result: (s = 7, a = :right, r = -1, sp = 8, t = 1)\n",
       "e: 1, t: 5, agent 1, result: (s = 11, a = :right, r = -10, sp = 12, t = 5)\n",
-      "e: 1, t: 4, agent 2, result: (s = 10, a = :right, r = -1, sp = 11, t = 4)\n",
-      "agent 1 is done\n",
-      "e: 1, t: 5, agent 2, result: (s = 11, a = :right, r = -10, sp = 12, t = 5)\n",
-      "setup agents\n",
-      "e: 1, t: 1, agent 1, result: (s = 7, a = :right, r = -1, sp = 8, t = 1)\n",
-      "e: 1, t: 2, agent 1, result: (s = 8, a = :right, r = -1, sp = 9, t = 2)\n",
-      "e: 1, t: 1, agent 2, result: (s = 7, a = :right, r = -1, sp = 8, t = 1)\n",
-      "e: 1, t: 3, agent 1, result: (s = 9, a = :right, r = -1, sp = 10, t = 3)\n",
-      "e: 1, t: 2, agent 2, result: (s = 8, a = :right, r = -1, sp = 9, t = 2)\n",
-      "e: 1, t: 4, agent 1, result: (s = 10, a = :right, r = -1, sp = 11, t = 4)\n",
-      "e: 1, t: 3, agent 2, result: (s = 9, a = :right, r = -1, sp = 10, t = 3)\n",
-      "e: 1, t: 5, agent 1, result: (s = 11, a = :right, r = -10, sp = 12, t = 5)\n",
-      "e: 1, t: 4, agent 2, result: (s = 10, a = :right, r = -1, sp = 11, t = 4)\n",
-      "agent 1 is done\n",
-      "e: 1, t: 5, agent 2, result: (s = 11, a = :right, r = -10, sp = 12, t = 5)\n",
-      "setup agents\n",
-      "e: 1, t: 1, agent 1, result: (s = 7, a = :left, r = -1, sp = 6, t = 1)\n",
-      "e: 1, t: 2, agent 1, result: (s = 6, a = :left, r = -1, sp = 5, t = 2)\n",
-      "e: 1, t: 1, agent 2, result: (s = 7, a = :right, r = -1, sp = 8, t = 1)\n",
-      "e: 1, t: 3, agent 1, result: (s = 5, a = :left, r = -1, sp = 4, t = 3)\n",
-      "e: 1, t: 2, agent 2, result: (s = 8, a = :right, r = -1, sp = 9, t = 2)\n",
-      "e: 1, t: 4, agent 1, result: (s = 4, a = :left, r = -1, sp = 3, t = 4)\n",
-      "e: 1, t: 3, agent 2, result: (s = 9, a = :right, r = -1, sp = 10, t = 3)\n",
-      "e: 1, t: 5, agent 1, result: (s = 3, a = :left, r = -1, sp = 2, t = 5)\n",
-      "e: 1, t: 4, agent 2, result: (s = 10, a = :right, r = -1, sp = 11, t = 4)\n",
-      "e: 1, t: 6, agent 1, result: (s = 2, a = :right, r = 10, sp = 1, t = 6)\n",
-      "e: 1, t: 5, agent 2, result: (s = 11, a = :right, r = -10, sp = 12, t = 5)\n",
-      "setup agents\n",
-      "e: 1, t: 1, agent 1, result: (s = 7, a = :right, r = -1, sp = 8, t = 1)\n",
-      "e: 1, t: 2, agent 1, result: (s = 8, a = :right, r = -1, sp = 9, t = 2)\n",
-      "e: 1, t: 1, agent 2, result: (s = 7, a = :left, r = -1, sp = 6, t = 1)\n",
-      "e: 1, t: 3, agent 1, result: (s = 9, a = :right, r = -1, sp = 10, t = 3)\n",
-      "e: 1, t: 2, agent 2, result: (s = 6, a = :left, r = -1, sp = 5, t = 2)\n",
-      "e: 1, t: 4, agent 1, result: (s = 10, a = :right, r = -1, sp = 11, t = 4)\n",
-      "e: 1, t: 3, agent 2, result: (s = 5, a = :left, r = -1, sp = 4, t = 3)\n",
-      "e: 1, t: 5, agent 1, result: (s = 11, a = :right, r = -10, sp = 12, t = 5)\n",
-      "e: 1, t: 4, agent 2, result: (s = 4, a = :left, r = -1, sp = 3, t = 4)\n",
-      "agent 1 is done\n",
-      "e: 1, t: 5, agent 2, result: (s = 3, a = :left, r = -1, sp = 2, t = 5)\n",
-      "agent 1 is done\n",
-      "e: 1, t: 6, agent 2, result: (s = 2, a = :right, r = 10, sp = 1, t = 6)\n",
-      "setup agents\n",
-      "e: 1, t: 1, agent 1, result: (s = 7, a = :left, r = -1, sp = 6, t = 1)\n",
-      "e: 1, t: 2, agent 1, result: (s = 6, a = :left, r = -1, sp = 5, t = 2)\n",
-      "e: 1, t: 1, agent 2, result: (s = 7, a = :right, r = -1, sp = 8, t = 1)\n",
-      "e: 1, t: 3, agent 1, result: (s = 5, a = :left, r = -1, sp = 4, t = 3)\n",
-      "e: 1, t: 2, agent 2, result: (s = 8, a = :right, r = -1, sp = 9, t = 2)\n",
-      "e: 1, t: 4, agent 1, result: (s = 4, a = :left, r = -1, sp = 3, t = 4)\n",
-      "e: 1, t: 3, agent 2, result: (s = 9, a = :right, r = -1, sp = 10, t = 3)\n",
-      "e: 1, t: 5, agent 1, result: (s = 3, a = :left, r = -1, sp = 2, t = 5)\n",
-      "e: 1, t: 4, agent 2, result: (s = 10, a = :right, r = -1, sp = 11, t = 4)\n",
-      "e: 1, t: 6, agent 1, result: (s = 2, a = :right, r = 10, sp = 1, t = 6)\n",
-      "e: 1, t: 5, agent 2, result: (s = 11, a = :right, r = -10, sp = 12, t = 5)\n",
-      "Any[(run, 18.0, 18.0), (run, 18.0, 18.0), (run, -1.0, 18.0), (run, 18.0, -1.0), (run, -1.0, 18.0)]\n"
+      "Any[(1, 1, 1, 7, -1), (1, 1, 2, 8, -1), (1, 2, 1, 7, -1), (1, 1, 3, 9, -1), (1, 2, 2, 8, -1), (1, 3, 1, 7, -1), (1, 1, 4, 10, -1), (1, 2, 3, 9, -1), (1, 3, 2, 6, -1), (1, 4, 1, 7, -1), (1, 1, 5, 11, -10)]11×6 DataFrame\n",
+      "│ Row │ run   │ epoch │ agent │ time  │ state │ reward │\n",
+      "│     │ \u001b[90mInt64\u001b[39m │ \u001b[90mInt64\u001b[39m │ \u001b[90mInt64\u001b[39m │ \u001b[90mInt64\u001b[39m │ \u001b[90mInt64\u001b[39m │ \u001b[90mInt64\u001b[39m  │\n",
+      "├─────┼───────┼───────┼───────┼───────┼───────┼────────┤\n",
+      "│ 1   │ 1     │ 1     │ 1     │ 1     │ 7     │ -1     │\n",
+      "│ 2   │ 1     │ 1     │ 1     │ 2     │ 8     │ -1     │\n",
+      "│ 3   │ 1     │ 1     │ 2     │ 1     │ 7     │ -1     │\n",
+      "│ 4   │ 1     │ 1     │ 1     │ 3     │ 9     │ -1     │\n",
+      "│ 5   │ 1     │ 1     │ 2     │ 2     │ 8     │ -1     │\n",
+      "│ 6   │ 1     │ 1     │ 3     │ 1     │ 7     │ -1     │\n",
+      "│ 7   │ 1     │ 1     │ 1     │ 4     │ 10    │ -1     │\n",
+      "│ 8   │ 1     │ 1     │ 2     │ 3     │ 9     │ -1     │\n",
+      "│ 9   │ 1     │ 1     │ 3     │ 2     │ 6     │ -1     │\n",
+      "│ 10  │ 1     │ 1     │ 4     │ 1     │ 7     │ -1     │\n",
+      "│ 11  │ 1     │ 1     │ 1     │ 5     │ 11    │ -10    │\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"seed_chain_simulation.csv\""
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_agents = 10\n",
+    "results = run_seed_chain_simulations(1, Q_tables1, Q_tables2, N_tables1, N_tables2, num_agents)\n",
+    "using CSV\n",
+    "using DataFrames\n",
+    "df = DataFrame(run = [x[1] for x in results], epoch = [x[2] for x in results], agent=[x[3] for x in results],\n",
+    "               time = [x[4] for x in results], state = [x[5] for x in results], reward = [x[6] for x in results])\n",
+    "println(df)\n",
+    "CSV.write(\"seed_chain_simulation.csv\", df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ErrorException",
+     "evalue": "syntax: invalid keyword argument name \"([:state, :reward] => Regret)\"",
+     "output_type": "error",
+     "traceback": [
+      "syntax: invalid keyword argument name \"([:state, :reward] => Regret)\"",
+      ""
      ]
     }
    ],
    "source": [
-    "println(run_seed_chain_simulations(5, Q_tables1, Q_tables2, N_tables1, N_tables2))"
+    "using DataFrames\n",
+    "\n",
+    "R = (num_states - 2) / 2\n",
+    "#df2 = groupby(groupby(df, :epoch), :agent)\n",
+    "df2 = by(df, [:epoch, :agent], [:state, :reward] => Regret = x -> R - (2 -  maximum(x.state) + 10 + sum( + x.reward)))\n",
+    "df3 = by(df2, [:agent], [:Regret ] => mean)\n",
+    "df3\n",
+    "#aggregate(df, :Species, [sum, mean])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 max: 4×3 DataFrame\n",
+      "│ Row │ epoch │ agent │ state_maximum │\n",
+      "│     │ Int64 │ Int64 │ Int64         │\n",
+      "├─────┼───────┼───────┼───────────────┤\n",
+      "│ 1   │ 1     │ 1     │ 11            │\n",
+      "│ 2   │ 1     │ 2     │ 9             │\n",
+      "│ 3   │ 1     │ 3     │ 7             │\n",
+      "│ 4   │ 1     │ 4     │ 7             │"
+     ]
+    }
+   ],
+   "source": [
+    "num_states\n",
+    "R = (num_states - 2) / 2\n",
+    "max_theta_state = 2\n",
+    "for ag in 1:num_agents\n",
+    "    max_s = by(df, [:epoch, :agent], :state => maximum)\n",
+    "    print(\"$ag max: $max_s\")\n",
+    "end"
    ]
   },
   {
